# ScriptaLE

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan-package.yml
include/scripta/: logger.h  section_type.h  vdi.h  visual_data_info.h
